# searxing-hc

./: .gitignore  README.md
backend/: Cargo.toml
backend/benches/: overhead_bench.rs  real_data_bench.rs  simple_bench.rs  synthetic_bench.rs
backend/src/: data.rs  database.rs  embedder.rs  lib.rs  links.rs  main.rs
scraper/: browser.py  library.py  main.py
scraper/events/: 2025-summer.py
scripts/: deploy.sh  popular_word.py  searxing.service
website/: index.html  simple_serve.py
