[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.38", features = ["full"] }
serde-big-array = "0.5.1"
enum_dispatch = "0.3.13"
ordered-float = "5.0.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.5", features = ["cors", "fs"] }
smallvec = { version = "1.13", features = ["serde"] }
hyper = { version = "1.6.0", features = ["client"] }
hyper-util = "0.1.15"
axum = "0.8.4"
http-body-util = "0.1.3"
criterion = "0.7.0"

[[bench]]
name = "simple_bench"
harness = false